fix j11 reflective access warning